testing fix for video on mobile

--- a/src/Pages/QuizPage/QuizPage.css
+++ b/src/Pages/QuizPage/QuizPage.css
@@ -82,8 +82,10 @@
     }
 
     .quiz-p {
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
+
+
 }
 
 
